--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kaya Topluluk</title>
+  <title>Kaya Panel</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <div class="center">
     <div>
-      <h1>Kaya Topluluk $ver</h1>
+      <h1>Kaya Panel $ver</h1>
       <hr>
       <span>
         İndir:
@@ -19,14 +19,14 @@
       <a href="$fn" download="$fn">$fn</a>
       <span>($bytes)</span>
       <footer>
-        Kaya Topluluk &copy; $ver
+        Kaya Panel &copy; $ver
       </footer>
     </div>
   </div>
   <script>
     (() => {
-      const ver = "1.0.0"
-      const fn = "Kaya Topluluk " + ver + ".rar"
+      const ver = "1.0"
+      const fn = "Kaya Panel " + ver + ".rar"
       document.body.innerHTML = document.body.innerHTML.replace(/\$ver/g, ver).replace(/\$fn/g, fn)
       function formatBytes(i,B=2){if(!+i)return"0 Bytes";let t=Math.floor(Math.log(i)/Math.log(1024));return`${parseFloat((i/Math.pow(1024,t)).toFixed(B<0?0:B))} ${["Bytes","KB","MB","GB","TB","PB","EB","ZB","YB"][t]}`}
       fetch(fn).then(res => {
